<resources>
    <string name="app_name">Koder</string>
    <string name="hint_search_query">Введи имя, тег, почту…</string>
    <string name="cancel">Отмена</string>
    <string name="errorTitle"><b>Какой-то сверхразум все сломал</b></string>
    <string name="errorSubtitle">Постараемся быстро починить</string>
    <string name="tryAgain"><b>Попробовать снова</b></string>
    <string name="bottom_sheet_header"><b>Сортировка</b></string>
    <string name="byAlphabet">По алфавиту</string>
    <string name="byBirthday">По дню рождения</string>
    <string name="flying_saucer_image">Flying saucer image</string>
    <string name="close_button">Close button</string>
    <string name="filter_button">Filter button</string>
    <string name="back_button">Back button</string>
    <string name="photo">Photo</string>
    <string name="star_icon">Star icon</string>
    <string name="emptyErrorTitle"><b>Мы никого не нашли</b></string>
    <string name="emptyErrorSubtitle">Попробуй скорректировать запрос</string>
    <string name="loadingMessage">Секундочку, гружусь…</string>
    <string name="genericErrorMessage">Не могу обновить данные. Что-то пошло не так.</string>
    <string name="connectionErrorMessage">Не могу обновить данные. Проверь соединение с интернетом.</string>
</resources>