<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/vLine"
        android:layout_width="56dp"
        android:layout_height="4dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_rounded_bottomsheet_drag_handle"
        android:backgroundTint="@color/textColorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="122dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:text="@string/bottom_sheet_header"
        android:textAppearance="@style/BottomSheetHeaderStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vLine" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader">

        <RadioButton
            android:id="@+id/rbByAlphabet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/byAlphabet" />

        <RadioButton
            android:id="@+id/rbByBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/byBirthday" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>